--- a/css/styles.css
+++ b/css/styles.css
@@ -175,3 +175,21 @@ nav {
 .card {
   border: none;
 }
+.carousel-control-prev,
+.carousel-control-next {
+  width: 27px;
+  height: 44px;
+  background-color: #000;
+  border-radius: 4px;
+  border-color: rgb(255 255 255);
+  border-style: solid;
+  border-width: 1px;
+  top: calc(50% - 22px);
+  font-size: 1.5rem;
+  padding: 1.25rem .75rem;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  padding: 1.25rem .75rem;
+}
